src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <label>Approval Required ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Material_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>Product2.Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_File_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Uploaded ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olam_Total_Offer__c</fullName>
        <formula>Volume__c *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Olam Total Offer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Config_Source__c</fullName>
        <label>Product Configuration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved SKU</fullName>
                </value>
                <value>
                    <fullName>Product Config Master</fullName>
                </value>
                <value>
                    <fullName>SAP Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ratio__c</fullName>
        <label>Ratio</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Offer__c</fullName>
        <formula>Volume__c * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Record</fullName>
        <active>true</active>
        <description>uote Line Item is not editable if approval status is accepted</description>
        <errorConditionFormula>AND(
ISPICKVAL( PRIORVALUE( Approval_Status__c ) ,&apos;In Progress&apos;),
NOT( ISPICKVAL(Approval_Status__c,&apos;Accepted&apos;)),
NOT( ISPICKVAL(Approval_Status__c,&apos;Rejected&apos;)),
NOT( ISPICKVAL(Approval_Status__c,&apos;Recalled&apos;)),
NOT($Permission.AllowQuoteLineItemEditable),
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>You can not edit the record &apos;In Progress&apos; status</errorMessage>
    </validationRules>
</CustomObject>